--- a/static/static/style.css
+++ b/static/static/style.css
@@ -133,7 +133,7 @@ h6 {
 }
 
 h1 {
-    font-size: 2.75rem;
+    font-size: 2.25rem;
 }
 
 h2 {
@@ -240,7 +240,7 @@ ul.flat li {
 }
 
 .header .logo {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1.5em;
 }
 
@@ -430,7 +430,7 @@ ul.flat li {
 }
 
 h1.intro {
-    margin: 120px 0;
+    margin: 48px 0 0 0;
     font-weight: 300;
 }
 
@@ -514,9 +514,9 @@ h1.intro {
 
 .meta {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     border-top: 1px solid #C5C5C5;
-    margin: 18px 0 80px;
+    margin: 18px 0 50px;
     padding-top: 18px;
 }
 
@@ -578,7 +578,7 @@ h1.intro {
 
 .content-wrap {
     display: flex;
-    max-width: 1200px;
+    max-width: 1000px;
     position: relative;
     align-items: flex-start;
 }
