--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -1,4 +1,4 @@
-<div class="posts">
+<div class="container posts">
 	{{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
 	{{ $paginator := .Paginate (where $pages "Params.hidden" "ne" true) }}
 	
